<resources>
    <string name="app_name">Shopify</string>
    <string name="rightAddress">The Right Address \nFor Shopping \nAnyday</string>
    <string name="quality">It is very easy to reach the \nbest quality among all the \nproducts on the internet!</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="start_shopping">Start Shopping</string>
</resources>