<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/blury_background"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineLoginTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1"/>

        <TextView
            android:id="@+id/tv_app_name"
            style="@style/h3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:drawablePadding="6dp"
            android:text="@string/app_name"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_black_shape"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guidelineLoginTop" />

        <TextView
            android:id="@+id/tv_right_address_for_shopping"
            style="@style/h4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:text="@string/rightAddress"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_app_name" />

        <TextView
            android:id="@+id/tv_quality_of_service"
            style="@style/h2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/quality"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@+id/tv_right_address_for_shopping"
            app:layout_constraintStart_toStartOf="@+id/tv_right_address_for_shopping"
            app:layout_constraintTop_toBottomOf="@+id/tv_right_address_for_shopping" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_register_account_options"
            style="@style/blueButtonStyle"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:text="@string/register"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tv_right_address_for_shopping"
            app:layout_constraintStart_toStartOf="@+id/tv_right_address_for_shopping"
            app:layout_constraintTop_toBottomOf="@+id/tv_quality_of_service" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login_account_options"
            style="@style/whiteButtonStyle"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:layout_marginTop="16dp"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="@+id/btn_register_account_options"
            app:layout_constraintStart_toStartOf="@+id/btn_register_account_options"
            app:layout_constraintTop_toBottomOf="@+id/btn_register_account_options" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>