<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/texture_left"
        app:layout_constraintBottom_toTopOf="@+id/guidelineLeftTexture"
        app:layout_constraintDimensionRatio="1:3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_ellipse"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ellipse"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="@id/guidelineEllipseBottom"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@id/guidelineEllipseRight"
        app:layout_constraintStart_toStartOf="@id/guidelineEllipseLeft"
        app:layout_constraintTop_toTopOf="@id/guidelineEllipseTop" />

    <TextView
        android:id="@+id/tv_right_address_for_shopping"
        style="@style/h4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/rightAddress"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/iv_ellipse"
        app:layout_constraintEnd_toEndOf="@+id/iv_ellipse"
        app:layout_constraintStart_toStartOf="@+id/iv_ellipse"
        app:layout_constraintTop_toTopOf="@+id/guidelineLeftTexture" />

    <TextView
        android:id="@+id/tv_quality_of_service"
        style="@style/h2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/quality"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/tv_right_address_for_shopping"
        app:layout_constraintStart_toStartOf="@+id/tv_right_address_for_shopping"
        app:layout_constraintTop_toBottomOf="@+id/tv_right_address_for_shopping" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:src="@drawable/texture_right"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guidelineLeftTexture" />

    <androidx.appcompat.widget.AppCompatButton
        style="@style/blueButtonStyle"
        android:layout_width="180dp"
        android:layout_height="55dp"
        android:text="@string/start_shopping"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_right_address_for_shopping"
        app:layout_constraintStart_toStartOf="@+id/tv_right_address_for_shopping"
        app:layout_constraintTop_toBottomOf="@+id/tv_right_address_for_shopping" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeftTexture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.33" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEllipseLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEllipseRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEllipseTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.19" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEllipseBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.52" />
</androidx.constraintlayout.widget.ConstraintLayout>